# polymarket-rust-engine

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  NEXT_SESSION.md  README.md  STATUS.md  r1.md
docs/strategy1/: strategy1.md  strategy1_feedback.md  strategy1_feedback2.md
execution/: Cargo.toml
execution/src/: cancel.rs  client.rs  fee_rate.rs  heartbeat.rs  lib.rs  merge.rs  orders.rs  rate_limiter.rs
execution/src/websocket/: binance.rs  mod.rs  orderbook.rs  user.rs
shared/: Cargo.toml
shared/src/: lib.rs
strategies/s1-market-maker/: Cargo.toml
strategies/s1-market-maker/src/: fair_value.rs  inventory.rs  logger.rs  main.rs  market_selector.rs  news_halt.rs  risk.rs  stoikov.rs
