[package]
name = "execution"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
rust_decimal = "1"
rust_decimal_macros = "1"
dashmap = "5"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
futures-util = "0.3"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
